--- a/apps/application_server/Makefile
+++ b/apps/application_server/Makefile
@@ -1,6 +1,6 @@
 all:	 
 	rm -rf erl_cra* rebar3_crashreport;
-	rm -rf *~ */*~ */*/*~ */*/*/*~;
+	rm -rf *~ */*~;
 	rm -rf test_ebin;
 	rm -rf *.beam */*.beam;
 	rm -rf test.rebar;
@@ -9,24 +9,20 @@ all:
 	rm -rf _build;
 	rm -rf ebin;
 	rm -rf rebar.lock;
-	rm -rf *_container;
-	rm -rf tar_dir;
+	rm -rf *_specs;
 	#INFO: Compile application
 	rm -rf common_include;
 	cp -r ~/erlang/common_include .
+	cp config/rebar.config .;
 	rebar3 compile;
-	rebar3 release;
-	rebar3 as prod tar;
-	rm -rf tar_dir;
-	mkdir tar_dir;
-	cp _build/prod/rel/$(appl)/*.tar.gz tar_dir/$(appl).tar.gz;
 	rm -rf _build;
+	rm -rf rebar.lock
 	git status
 	echo Ok there you go!
 	#INFO: no_ebin_commit ENDED SUCCESSFUL
 clean:
 	rm -rf erl_cra* rebar3_crashreport;
-	rm -rf *~ */*~ */*/*~ */*/*/*~;
+	rm -rf *~ */*~;
 	rm -rf test_ebin;
 	rm -rf *.beam */*.beam;
 	rm -rf test.rebar;
@@ -35,9 +31,9 @@ clean:
 	rm -rf _build;
 	rm -rf ebin;
 	rm -rf rebar.lock;
-	rm -rf *_container;
-	rm -rf tar_dir;
+	rm -rf *_specs;
 	#INFO: Compile application
+	cp config/rebar.config .;
 	rm -rf common_include;
 	cp -r ~/erlang/common_include .
 	rebar3 compile;
@@ -46,7 +42,7 @@ clean:
 #INFO: clean ENDED SUCCESSFUL
 eunit: 
 	rm -rf erl_cra* rebar3_crashreport;
-	rm -rf *~ */*~ */*/*~ */*/*/*~;
+	rm -rf *~ */*~;
 	rm -rf test_ebin;
 	rm -rf *.beam */*.beam;
 	rm -rf test.rebar;
@@ -55,20 +51,21 @@ eunit:
 	rm -rf _build;
 	rm -rf ebin;
 	rm -rf rebar.lock;
-	rm -rf *_container;
+	rm -rf *_specs;
 #INFO: Creating eunit test code using test_ebin dir;
-	mkdir test_ebin;
 	rm -rf common_include;
 	cp -r ~/erlang/common_include .
-	erlc -I ~/erlang/common_include -o test_ebin test/*.erl;
-	erlc -o test_ebin /home/joq62/erlang/new_setup/services/common/src/*.erl;
-	rebar3 release;
-	rebar3 as prod tar;
-	rm -rf tar_dir;
-	mkdir tar_dir;
-	cp _build/prod/rel/$(appl)/*.tar.gz tar_dir/$(appl).tar.gz;
+	mkdir test_ebin;
+	cp test_config/test.rebar.config rebar.config;
+	erlc -o test_ebin test/*.erl;
+	cp test/*.app test_ebin;
+	rebar3 compile
 	#INFO: Starts the eunit testing .................
 	erl -pa test_ebin\
-	 -sname test_$(appl)\
+	 -pa _build/default/lib/log/ebin\
+	 -pa _build/default/lib/rd/ebin\
+	 -pa _build/default/lib/common/ebin\
+	 -pa _build/default/lib/$(a)/ebin\
+	 -sname test_appl\
 	 -run $(m) start\
 	 -setcookie a
