--- a/rebar.config
+++ b/rebar.config
@@ -7,18 +7,16 @@
 {deps, [
        
 
-       {common,{git,"https://github.com/joq62/common.git",{branch,"main"}}},
-       {rd,{git,"https://github.com/joq62/rd.git",{branch,"main"}}},
-       {log,{git,"https://github.com/joq62/log.git",{branch,"main"}}}
+       {common,{git,"https://github.com/joq62/common.git",{branch,"main"}}}
+    
        ]}.
 
-{relx, [{release, {appl, "0.1.0"},
+{relx, [{release, {control, "0.1.0"},
          [
 		common,
 		log,
-		rd,
-		
-	 	appl,
+	%	application_server,
+	%	control,
           	sasl
 		]},
 
