--- a/rebar.config
+++ b/rebar.config
@@ -5,18 +5,18 @@
             {d, 'EDOC', [{doc_path, "doc"}]}]}.
 	    
 {deps, [
+       {common,{git,"https://github.com/joq62/common.git",{branch,"main"}}},
+       {log,{git,"https://github.com/joq62/log.git",{branch,"main"}}}
        
 
-       {common,{git,"https://github.com/joq62/common.git",{branch,"main"}}}
-    
        ]}.
 
 {relx, [{release, {control, "0.1.0"},
          [
 		common,
 		log,
-	%	application_server,
-	%	control,
+		application_server,
+		control,
           	sasl
 		]},
 
